--- a/index.html
+++ b/index.html
@@ -255,13 +255,26 @@
         let mapLines = [];
         let indent = 0;
         let lineNr = 0;
+        let lineInError = 0;
+        let latestIndent = 0;
         for (let line of lines) {
             lineNr++;
             let indentBefore = getIndentBefore(line);
             let indentAfter = getIndentAfter(line);
+            if (lineInError < 1 && indent + indentBefore < 0) {
+                lineInError = lineNr;
+            }
             mapLines.push(getIndent(indent + indentBefore) + line);
             indent += indentAfter;
+            latestIndent = indent;
+        }
+        if (lineInError < 1 && latestIndent !== 0) {
+            lineInError = lineNr;
+        }
 
+        if (lineInError > 0) {
+            alert("The indentation revealed issues with your brackets or if/else statements. " +
+                "The first indentation error was noticed on line: " + lineInError);
         }
 
         return mapLines.join("\n");
